removed getChild of SolJsonParserTest